# poolly

./: .gitignore  Anchor.toml  nixpacks.toml  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml
app/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  railway.json
app/.claude/: launch.json
app/src/: middleware.ts  proxy.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/admin/: layout.tsx  page.tsx
app/src/app/admin/login/: page.tsx
app/src/app/admin/payments/: page.tsx
app/src/app/admin/pools/: page.tsx
app/src/app/admin/reports/: page.tsx
app/src/app/admin/users/: page.tsx
app/src/app/api/bundle-optimize/: route.ts
app/src/app/api/chat/: route.ts
app/src/app/api/demand-intel/: route.ts
app/src/app/api/log-override/: route.ts
app/src/app/api/pool-create-intent/: route.ts
app/src/app/api/price-optimizer/: route.ts
app/src/app/api/profile/: route.ts
app/src/app/api/upload-proof/: route.ts
app/src/app/api/verify-proof/: route.ts
app/src/app/api/waitlist/: route.ts
app/src/app/dashboard/host/: page.tsx
app/src/app/pools/: page.tsx
app/src/app/profile/: page.tsx
app/src/components/: PoollyLogo.tsx  bundle-optimizer.tsx  chatbot.tsx  demand-intel.tsx  navbar.tsx  pool-card.tsx  pricing-optimizer.tsx  proof-verifier.tsx  providers.tsx  vault-ui.tsx
app/src/lib/: constants.ts  email.ts  idl.ts  pool-server.ts  poolly-client.ts  ratelimit.ts  svc-utils.ts  use-admin-data.ts  use-display-name.ts
programs/poolly/: Cargo.toml
programs/poolly/src/: lib.rs
(+10 files in other folders)
